# Major-Folder

./: .gitignore
backend/: .env.example  auth.py  email_service.py  global_points.py  main.py  model.py  preprocess.py  pyproject.toml  users.json  weather.py
backend/saved_model/: fire_risk_model.keras  metadata.json  scaler.pkl
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  config.js  index.css
frontend/src/components/: HeatMap.jsx  PredictionForm.jsx  WeatherCard.jsx
frontend/src/pages/: DashboardPage.jsx  LoginPage.jsx  SignupPage.jsx
